--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My first website</title>
 </head>
 <body>
+    <h1>Welcome to My first website</h1>
+    <p>This is a simple HTML page.</p>
     
 </body>
 </html>
